tests/NormalTests/paczka1/fuzzy1/90082410.err
Error in line 1: mJWaZvvf S99 9,0
Error in line 9: A595 S99 95,1
Error in line 18: 5Ihs1mkiAq S986 93,1
Error in line 25: n8Hk S99 1,0
Error in line 35: OALNUDQ7le A661 74,9
